--- a/ICML_workshop_submission/icml2015stylefiles/DFD.tex
+++ b/ICML_workshop_submission/icml2015stylefiles/DFD.tex
@@ -218,11 +218,11 @@ A_{t_i} &= \frac{e^{A_{y_i}}}{\sum_{i' = 1}^n e^{A_{y_i'}}}\\
 \end{aligned}
 \end{equation}
 One way to ensure that $C_{xt}$ is zero if $w_{xy_i}$ is the same for all $y_i$ is to set:
-\begin{equation}
-\begin{cases}
-C_{y_i' t_i} &= \frac{n-1}{n} \delta_t_i' & \text{for} i' = i
-\end{cases}
-\end{equation}
+%\begin{equation}
+%\begin{cases}
+%C_{y_i' t_i} &= \frac{n-1}{n} \delta_t_i' & \text{for} i' = i
+%\end{cases}
+%\end{equation}
 
 \subsection{A note on final activation layers}
 
