mean normalisation stuff implemented and working
Former-commit-id: 3af6bd6cf857dc4b092c1effc5421f395b14c253

--- a/examples/tinyimagenet/DeepLIFT_on_imagenet.ipynb
+++ b/examples/tinyimagenet/DeepLIFT_on_imagenet.ipynb
@@ -2,22 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using Theano backend.\n",
-      "Using gpu device 0: GeForce GT 750M (CNMeM is disabled, CuDNN not available)\n",
-      "/Users/avantishrikumar/anaconda/lib/python2.7/site-packages/theano/tensor/signal/downsample.py:5: UserWarning: downsample module has been moved to the pool module.\n",
-      "  warnings.warn(\"downsample module has been moved to the pool module.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Set up environment and import necessary dependencies\n",
     "\n",
@@ -64,22 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def mean_normalise_softmax_weights(softmax_dense_layer):\n",
-    "    weights, biases = softmax_dense_layer.get_weights()\n",
-    "    new_weights = weights - np.mean(weights, axis=1)[:,None]\n",
-    "    new_biases = biases - np.mean(biases)\n",
-    "    softmax_dense_layer.set_weights([new_weights, new_biases])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -94,17 +68,25 @@
     "reload(deepLIFTutils)\n",
     "#/srv/scratch/annashch/cs231n_project/vgg16_weights_dropout_regularization_augmenteddataTintContrast.stupidsgd.hdf5\n",
     "keras_model=VGG_16('vgg16_weights_dropout_regularization_augmenteddataTintContrast.stupidsgd.hdf5')\n",
-    "mean_normalise_softmax_weights(keras_model.layers[-2])\n"
+    "#mean_normalise_softmax_weights(keras_model.layers[-2])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean-normalising softmax\n"
+     ]
+    }
+   ],
    "source": [
     "import keras_conversion as kc\n",
     "reload(kc)\n",
@@ -112,7 +94,22 @@
     "reload(B)\n",
     "import blobs\n",
     "reload(blobs)\n",
+    "import models\n",
+    "reload(models)\n",
+    "import deeplift_util\n",
+    "reload(deeplift_util)\n",
     "deeplift_model = kc.convert_sequential_model(keras_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "target_contribs_func = deeplift_model.get_target_contribs_func(input_layer_idx=0)"
    ]
   },
   {
@@ -139,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -154,31 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(50, 3, 64, 64)\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'output_func' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-1e86192d2aa9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m                                      \u001b[0mkeras_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                                      allow_input_downcast=True)\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mkeras_outputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeeplift_util\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_function_in_batches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_func\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_data_list\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mkeras_outputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeras_outputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'output_func' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get the outputs of the net on the validation set\n",
     "reload(deepLIFTutils)\n",
@@ -189,15 +166,46 @@
     "keras_output_func = theano.function([keras_model.layers[0].input],\n",
     "                                     keras_model.layers[-1].get_output(train=False),\n",
     "                                     allow_input_downcast=True)\n",
-    "keras_outputs = deeplift_util.run_function_in_batches(output_func, input_data_list=[data])\n",
-    "keras_outputs=np.array(keras_outputs)\n",
-    "\n",
+    "keras_outputs = deeplift_util.run_function_in_batches(keras_output_func, input_data_list=[data])\n",
+    "keras_outputs=np.array(keras_outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "deeplift_output_func = theano.function([deeplift_model.get_layers()[0].get_activation_vars()],\n",
     "                                        deeplift_model.get_layers()[-1].get_activation_vars(),\n",
     "                                        allow_input_downcast=True)\n",
     "deeplift_outputs = deeplift_util.run_function_in_batches(deeplift_output_func, input_data_list=[data])\n",
     "deeplift_outputs = np.array(deeplift_outputs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.sum(np.abs(keras_outputs-deeplift_outputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
